--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,7 @@ header h1 {
 
 footer {
   text-align: center;
-  background-color: #6200ea; /* Primary color used throughout the site */
-  color: #fff;             /* White text for contrast */
+  color: #757575;
   padding: 10px 0;         /* Vertical padding */
   margin-top: 20px;        /* Optional: Adds space above the footer */
 }
