--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
   }
   
   /* ==========================================================================
-     Navigation
+     Horizontal Navbar
      ========================================================================== */
   nav {
     position: relative;
